D: If only if only

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "start": "node main.js"
+    "build": "vite build",
+    "start": "node dist/heifer.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,10 @@
   "devDependencies": {
     "@babel/cli": "^7.27.2",
     "@babel/core": "^7.27.7",
-    "@babel/preset-env": "^7.27.2"
+    "@babel/preset-env": "^7.27.2",
+    "vite": "^7.0.0"
+  },
+  "dependencies": {
+    "cowsay": "^1.6.0"
   }
 }
